AnalyseurXMLDTD/xml.output
Terminaux qui ne sont utilisés

   CLOSESPECIAL
   ENCODING
   STARTSPECIAL


Grammaire

    0 $accept: document $end

    1 document: declarations element misc_seq_opt

    2 misc_seq_opt: misc_seq_opt misc
    3             | /* vide */

    4 misc: COMMENT

    5 declarations: declaration
    6             | /* vide */

    7 declaration: DOCTYPE NAME NAME VALUE CLOSE

    8 element: start empty_or_content

    9 start: START
   10      | NSSTART

   11 empty_or_content: SLASH CLOSE
   12                 | close_content_and_end name_or_nsname_opt CLOSE

   13 attributs: attributs NAME EQ VALUE
   14          | /* vide */

   15 name_or_nsname_opt: NAME
   16                   | NSNAME
   17                   | /* vide */

   18 close_content_and_end: attributs CLOSE content END

   19 content: content DATA
   20        | content misc
   21        | content element
   22        | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EQ (258) 13
SLASH (259) 11
CLOSE (260) 7 11 12 18
END (261) 18
CLOSESPECIAL (262)
DOCTYPE (263) 7
ENCODING (264)
VALUE (265) 7 13
DATA (266) 19
COMMENT (267) 4
NAME (268) 7 13 15
NSNAME (269) 16
NSSTART (270) 10
START (271) 9
STARTSPECIAL (272)


Non-terminaux, suivis des règles où ils apparaissent

$accept (18)
    à gauche: 0
document (19)
    à gauche: 1, à droite: 0
misc_seq_opt (20)
    à gauche: 2 3, à droite: 1 2
misc (21)
    à gauche: 4, à droite: 2 20
declarations (22)
    à gauche: 5 6, à droite: 1
declaration (23)
    à gauche: 7, à droite: 5
element (24)
    à gauche: 8, à droite: 1 21
start (25)
    à gauche: 9 10, à droite: 8
empty_or_content (26)
    à gauche: 11 12, à droite: 8
attributs (27)
    à gauche: 13 14, à droite: 13 18
name_or_nsname_opt (28)
    à gauche: 15 16 17, à droite: 12
close_content_and_end (29)
    à gauche: 18, à droite: 12
content (30)
    à gauche: 19 20 21 22, à droite: 18 19 20 21


état 0

    0 $accept: . document $end

    DOCTYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 6 (declarations)

    document      aller à l'état 2
    declarations  aller à l'état 3
    declaration   aller à l'état 4


état 1

    7 declaration: DOCTYPE . NAME NAME VALUE CLOSE

    NAME  décalage et aller à l'état 5


état 2

    0 $accept: document . $end

    $end  décalage et aller à l'état 6


état 3

    1 document: declarations . element misc_seq_opt

    NSSTART  décalage et aller à l'état 7
    START    décalage et aller à l'état 8

    element  aller à l'état 9
    start    aller à l'état 10


état 4

    5 declarations: declaration .

    $défaut  réduction par utilisation de la règle 5 (declarations)


état 5

    7 declaration: DOCTYPE NAME . NAME VALUE CLOSE

    NAME  décalage et aller à l'état 11


état 6

    0 $accept: document $end .

    $défaut  accepter


état 7

   10 start: NSSTART .

    $défaut  réduction par utilisation de la règle 10 (start)


état 8

    9 start: START .

    $défaut  réduction par utilisation de la règle 9 (start)


état 9

    1 document: declarations element . misc_seq_opt

    $défaut  réduction par utilisation de la règle 3 (misc_seq_opt)

    misc_seq_opt  aller à l'état 12


état 10

    8 element: start . empty_or_content

    SLASH  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 14 (attributs)

    empty_or_content       aller à l'état 14
    attributs              aller à l'état 15
    close_content_and_end  aller à l'état 16


état 11

    7 declaration: DOCTYPE NAME NAME . VALUE CLOSE

    VALUE  décalage et aller à l'état 17


état 12

    1 document: declarations element misc_seq_opt .
    2 misc_seq_opt: misc_seq_opt . misc

    COMMENT  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 1 (document)

    misc  aller à l'état 19


état 13

   11 empty_or_content: SLASH . CLOSE

    CLOSE  décalage et aller à l'état 20


état 14

    8 element: start empty_or_content .

    $défaut  réduction par utilisation de la règle 8 (element)


état 15

   13 attributs: attributs . NAME EQ VALUE
   18 close_content_and_end: attributs . CLOSE content END

    CLOSE  décalage et aller à l'état 21
    NAME   décalage et aller à l'état 22


état 16

   12 empty_or_content: close_content_and_end . name_or_nsname_opt CLOSE

    NAME    décalage et aller à l'état 23
    NSNAME  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 17 (name_or_nsname_opt)

    name_or_nsname_opt  aller à l'état 25


état 17

    7 declaration: DOCTYPE NAME NAME VALUE . CLOSE

    CLOSE  décalage et aller à l'état 26


état 18

    4 misc: COMMENT .

    $défaut  réduction par utilisation de la règle 4 (misc)


état 19

    2 misc_seq_opt: misc_seq_opt misc .

    $défaut  réduction par utilisation de la règle 2 (misc_seq_opt)


état 20

   11 empty_or_content: SLASH CLOSE .

    $défaut  réduction par utilisation de la règle 11 (empty_or_content)


état 21

   18 close_content_and_end: attributs CLOSE . content END

    $défaut  réduction par utilisation de la règle 22 (content)

    content  aller à l'état 27


état 22

   13 attributs: attributs NAME . EQ VALUE

    EQ  décalage et aller à l'état 28


état 23

   15 name_or_nsname_opt: NAME .

    $défaut  réduction par utilisation de la règle 15 (name_or_nsname_opt)


état 24

   16 name_or_nsname_opt: NSNAME .

    $défaut  réduction par utilisation de la règle 16 (name_or_nsname_opt)


état 25

   12 empty_or_content: close_content_and_end name_or_nsname_opt . CLOSE

    CLOSE  décalage et aller à l'état 29


état 26

    7 declaration: DOCTYPE NAME NAME VALUE CLOSE .

    $défaut  réduction par utilisation de la règle 7 (declaration)


état 27

   18 close_content_and_end: attributs CLOSE content . END
   19 content: content . DATA
   20        | content . misc
   21        | content . element

    END      décalage et aller à l'état 30
    DATA     décalage et aller à l'état 31
    COMMENT  décalage et aller à l'état 18
    NSSTART  décalage et aller à l'état 7
    START    décalage et aller à l'état 8

    misc     aller à l'état 32
    element  aller à l'état 33
    start    aller à l'état 10


état 28

   13 attributs: attributs NAME EQ . VALUE

    VALUE  décalage et aller à l'état 34


état 29

   12 empty_or_content: close_content_and_end name_or_nsname_opt CLOSE .

    $défaut  réduction par utilisation de la règle 12 (empty_or_content)


état 30

   18 close_content_and_end: attributs CLOSE content END .

    $défaut  réduction par utilisation de la règle 18 (close_content_and_end)


état 31

   19 content: content DATA .

    $défaut  réduction par utilisation de la règle 19 (content)


état 32

   20 content: content misc .

    $défaut  réduction par utilisation de la règle 20 (content)


état 33

   21 content: content element .

    $défaut  réduction par utilisation de la règle 21 (content)


état 34

   13 attributs: attributs NAME EQ VALUE .

    $défaut  réduction par utilisation de la règle 13 (attributs)
